# advent-of-code-2022

day1/src/: lib.rs  main.rs
day10/: Cargo.toml
day10/src/: crt.rs  lib.rs  main.rs
day11/: Cargo.toml
day11/src/: lib.rs  main.rs  monkey.rs
day12/: Cargo.toml
day12/src/: lib.rs  main.rs
day13/: Cargo.toml  fulllog  log  mylog  test2.txt  testlog  tmp
day13/src/: lib.rs  main.rs  packet.rs
day14/: Cargo.toml
day14/src/: lib.rs  main.rs  reservoir.rs
day15/: Cargo.toml
day15/src/: lib.rs  main.rs  sensors.rs
day16/: Cargo.toml  test2.txt
day16/src/: lib.rs  main.rs  valves.rs
day2/src/: lib.rs  main.rs
day3/: Cargo.toml
day3/src/: lib.rs  main.rs
day4/: Cargo.toml
day4/src/: lib.rs  main.rs
day5/: Cargo.toml  input.txt
day5/src/: lib.rs  main.rs
day6/: ;  Cargo.toml  input.txt  log
day6/src/: lib.rs  main.rs
day7/: Cargo.toml
day7/src/: lib.rs  main.rs  parse.rs  types.rs
day8/: Cargo.toml
day8/src/: lib.rs  main.rs
day9/: Cargo.toml
day9/src/: lib.rs  main.rs  rope.rs
