[package]
name = "day15"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fs-err = "2.9.0"
nom = "7.1"
clap = { version = "4.1", features = ["derive"] }
indicatif = "0.17"
hashbrown = { version ="0.13", features = ["rayon"] }
rayon = "1.6"
