[package]
name = "day16"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fs-err = "2.9.0"
petgraph = "0.6"
nom = { version = "7.1", features = ["alloc"] }
itertools = "0.10"
clap = { version = "4.1", features = ["derive"] }
hashbrown = "0.13"
